codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_mo.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────"
"❯ /mo                                                       "
"                                                            "
"────────────────────────────────────────────────────────────"
"  /model  choose what model and reasoning effort to use     "
